@@ -1,31 +1,39 @@
-FROM maven:3.6.3-jdk-11-slim as maven
+FROM docker.io/maven:3.8.4-eclipse-temurin-11 as maven
 WORKDIR /quarkus
 ENV MODULE=resteasy-reactive-hibernate
 
 COPY pom.xml pom.xml
-COPY $MODULE/pom.xml $MODULE/pom.xml
+COPY quarkus-benchmark-common quarkus-benchmark-common/
+COPY resteasy-hibernate resteasy-hibernate/
+COPY resteasy-reactive-hibernate resteasy-reactive-hibernate/
+COPY resteasy-reactive-hibernate-reactive resteasy-reactive-hibernate-reactive/
 
 # Uncomment to test pre-release quarkus
 #RUN mkdir -p /root/.m2/repository/io
 #COPY m2-quarkus /root/.m2/repository/io/quarkus
 
+WORKDIR /quarkus
+RUN mvn -DskipTests install -pl :benchmark,:quarkus-benchmark-common -B -q
+
 WORKDIR /quarkus/$MODULE
-RUN mvn dependency:go-offline -q
+RUN mvn dependency:go-offline -B -q
 WORKDIR /quarkus
 
 COPY $MODULE/src $MODULE/src
 
 WORKDIR /quarkus/$MODULE
-RUN mvn package -q
+RUN mvn package -B -q
 WORKDIR /quarkus
 
-FROM openjdk:11.0.6-jdk-slim
+FROM docker.io/eclipse-temurin:11-jdk
 WORKDIR /quarkus
 ENV MODULE=resteasy-reactive-hibernate
 
-COPY --from=maven /quarkus/$MODULE/target/lib lib
-COPY --from=maven /quarkus/$MODULE/target/$MODULE-1.0-SNAPSHOT-runner.jar app.jar
+COPY --from=maven /quarkus/$MODULE/target/quarkus-app/lib/ lib
+COPY --from=maven /quarkus/$MODULE/target/quarkus-app/app/ app
+COPY --from=maven /quarkus/$MODULE/target/quarkus-app/quarkus/ quarkus
+COPY --from=maven /quarkus/$MODULE/target/quarkus-app/quarkus-run.jar quarkus-run.jar
+COPY run_quarkus.sh run_quarkus.sh
 
 EXPOSE 8080
-
-CMD ["java", "-server", "-XX:-UseBiasedLocking", "-XX:+UseStringDeduplication", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-Djava.lang.Integer.IntegerCache.high=10000", "-Dvertx.disableHttpHeadersValidation=true", "-Dvertx.disableMetrics=true", "-Dvertx.disableH2c=true", "-Dvertx.disableWebsockets=true", "-Dvertx.flashPolicyHandler=false", "-Dvertx.threadChecks=false", "-Dvertx.disableContextTimings=true", "-Dvertx.disableTCCL=true", "-Dhibernate.allow_update_outside_transaction=true", "-Djboss.threads.eqe.statistics=false", "-jar", "app.jar"]
+ENTRYPOINT "./run_quarkus.sh"
